--- a/public_html/practica/practicaPHP.html
+++ b/public_html/practica/practicaPHP.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
-  <title>Exemple PHP: login</title>
+  <title>Practica PHP - Darius Natan, Santa</title>
   <link rel="stylesheet" href="exemple.css" type="text/css"> 
 </head>
 <body>
-  <h1>Exemple PHP+SQL Oracle+HTML curs 24/25</h1>
+  <h1>Practica PHP - Darius Natan, Santa</h1>
   <h2>Pantalla de login a Oracle</h2>
   <p><b>COMPTE!</b> tres intents erronis i el compte queda bloquejat</p>
   <hr>
